# opcuax

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml  test.yml
src/opcuax/: __init__.py  enums.py  node.py  types.py
test/: test_base.py  test_enum.py  test_node.py
