[project]
name = "opcuax"
version = "0.0.0"
description = "A hypermodern, type-safe, zero-dependency Python library for building asynchronous, standards-compliant OPC UA clients and servers with full type annotations and minimal overhead."
authors = [{ name = "michealroberts", email = "michael@observerly.com" }]
maintainers = [{ name = "Michael Roberts", email = "michael@observerly.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []

[project.urls]
Source = "https://github.com/michealroberts/opcuax"
Issues = "https://github.com/michealroberts/opcuax/issues"
PullRequests = "https://github.com/michealroberts/opcuax/pulls"
Discussions = "https://github.com/michealroberts/opcuax/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_default_fixture_loop_scope = "session"
